<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolBarTheme"
        app:popupTheme="@style/MenuToolBarTheme">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:id="@+id/layout_query"
            app:layout_constraintTop_toTopOf="parent">

            <EditText

                android:id="@+id/notification_query_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:hint="@string/notification_query_term"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_section"
            app:layout_constraintTop_toBottomOf="@id/layout_query">
            <GridLayout
                android:id="@+id/notification_items_check_boxes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="3"
                android:layout_margin="@dimen/small_margin">
                <CheckBox
                    android:id="@+id/notification_item_art"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_item_arts"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"/>
                <CheckBox
                    android:id="@+id/notification_item_business"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:text="@string/search_item_business"
                    android:checked="false"
                    android:layout_columnWeight="1"/>
                <CheckBox
                    android:id="@+id/notification_item_entrepreneurs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:text="@string/search_item_entrepreneurs"
                    android:layout_columnWeight="1"/>
                <CheckBox
                    android:id="@+id/notification_item_politics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="@string/search_item_politics"
                    android:checked="false"
                    android:layout_columnWeight="1"/>
                <CheckBox
                    android:id="@+id/notification_item_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="@string/search_item_sports"
                    android:layout_columnWeight="1"/>
                <CheckBox
                    android:id="@+id/notification_item_travel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:text="@string/search_item_travel"
                    android:checked="false"
                    android:layout_columnWeight="1"/>


            </GridLayout>

        </LinearLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/layout_section"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            app:layout_constraintTop_toBottomOf="@id/separator">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enable_notifications_once_per_day"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/notification_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>