...
            android:orientation="horizontal"
            android:layout_margin="@dimen/small_margin"
            android:id="@+id/query_layout"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/query_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadeScrollbars="true"
                android:hint="@string/search_query_term"
                android:inputType="text" />

...
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:text="@string/search_item_politics"
                    android:layout_columnWeight="1"/>
                <CheckBox
                    android:id="@+id/search_item_sport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:text="@string/search_item_sports"
                    android:layout_columnWeight="1"/>
...
