<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolBarTheme"
        app:popupTheme="@style/MenuToolBarTheme">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/markdown_view_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <es.dmoral.markdownview.MarkdownView
            android:id="@+id/markdown_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

        </es.dmoral.markdownview.MarkdownView>
    </LinearLayout>

</LinearLayout>